--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "resume-editor-ai",
-  "version": "1.0.0",
-  "description": "AI-powered resume builder with LaTeX output and multiple templates",
-  "main": "server.js",
+  "version": "2.0.0",
+  "description": "Production-ready AI-powered resume builder with LaTeX output and multiple templates",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "cluster": "pm2 start ecosystem.config.js",
+    "test": "jest",
+    "lint": "eslint src/",
+    "build": "echo 'Build completed'"
   },
   "keywords": [
     "resume",
@@ -14,19 +17,36 @@
     "latex",
     "ai",
     "gemini",
-    "pdf"
+    "pdf",
+    "ats",
+    "microservices"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "express-validator": "^7.0.1",
+    "axios": "^1.6.2",
+    "redis": "^4.6.10",
+    "bull": "^4.12.0",
+    "winston": "^3.11.0",
+    "mongoose": "^8.0.3",
+    "form-data": "^4.0.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "jest": "^29.7.0",
+    "eslint": "^8.55.0",
+    "pm2": "^5.3.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   }
 }
