--- a/package.json
+++ b/package.json
@@ -24,26 +24,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "express-validator": "^7.0.1",
     "axios": "^1.6.2",
-    "redis": "^4.6.10",
     "bull": "^4.12.0",
-    "winston": "^3.11.0",
-    "mongoose": "^8.0.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "form-data": "^4.0.0",
-    "pdf-parse": "^1.1.1"
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.1",
+    "pdf2pic": "^2.1.4",
+    "redis": "^4.6.10",
+    "sharp": "^0.33.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0",
     "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "pm2": "^5.3.0"
   },
   "engines": {
