--- a/package.json
+++ b/package.json
@@ -24,23 +24,26 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@resvg/resvg-js": "^2.6.2",
     "axios": "^1.6.2",
     "bull": "^4.12.0",
+    "canvas": "^3.1.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "form-data": "^4.0.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
-    "pdf2pic": "^2.1.4",
+    "pdf2pic": "^2.2.4",
     "redis": "^4.6.10",
-    "sharp": "^0.33.0",
+    "sharp": "^0.33.5",
     "winston": "^3.11.0"
   },
   "devDependencies": {
